# star-rendering

./: CMakeLists.txt  CmakePresets.json  README.md
data/: .gitattributes  entropy.py  full_gaia_stars_icrs.cache  histogram.py  stars.cache
docs/: REVEAL.md  analysis.md  journal.md  stars-notes.txt  todo.txt  unsolved-open-problems.txt
docs/perf-screenshots-csv/csv/: far-new.csv  far-old.csv  near-new.csv  near-old.csv  plot_render_stars.py
host/: CMakeLists.txt
host/src/: IComputeProgram.cpp  IComputeProgram.hpp  main.cpp  main_atomic_write_test.cpp  star_processing_main.cpp  window.cpp  window.hpp
host/src/camera/: camera_controller.cpp  camera_controller.hpp
host/src/experiments/centroid-tree/: CentroidCompute.cpp  CentroidCompute.hpp  compute_rasterize_individual.comp  octree.hpp
host/src/experiments/tilebased/: TilebasedCompute.cpp  TilebasedCompute.hpp  tilebased_compute.comp  tilebased_compute_tmp copy.comp
host/src/experiments/voxel/: VoxelCompute.cpp  VoxelCompute.hpp
host/src/experiments/vram-limits/: VRAMWriteCompute.cpp  VRAMWriteCompute.hpp  test_atomic_writes.comp  test_atomic_writes_v2.comp
host/src/procgen/: better_galaxy_gen.cpp  better_galaxy_gen.hpp  cuboid_generator.cpp  cuboid_generator.hpp  milky_way_generator.cpp  milky_way_generator.hpp
host/src/shaders/: compute_clear.comp  compute_draw_list.comp  compute_rasterize.comp  compute_show_draw_list.comp  debug.glsl  frustum_stuff.glsl  quad.frag  quad.vert
newrenderer/: CMakeLists.txt
newrenderer/include/: RawStar.hpp  newstar.hpp
newrenderer/src/: StarRenderer.cpp  StarRenderer.hpp  newstar.cpp  oldstuff
newrenderer/src/gl/: GpuStopwatch.hpp  GpuTexture.cpp  GpuTexture.hpp  SSBO.hpp  gl_context.hpp  shader_utils.cpp  shader_utils.hpp
newrenderer/src/preprocessing/: datatypes.cpp  datatypes.hpp  gpu_datatypes.hpp  preprocessing.cpp  preprocessing.hpp
newrenderer/src/shaders/: clear.comp  debugstats.comp  debugvisuals.comp  drawlist.comp  drawlist_clear.comp  ivec2 projectToTile(vec3 worldPos)  quad.frag  quad.vert  rasterize.comp  snippet-star-text-dbg.comp
newrenderer/src/shaders/common/: big_text.lib.comp  cosmoscout_snippets.lib.comp  debugdraw.lib.comp  small_text.lib.comp  unpack_uvec4.lib.comp
newrenderer/src/stars/: stars.cpp  stars.hpp
newrenderer/src/util/: generate_debug_string.hpp  glfw_keymap.hpp  util.cpp  util.hpp
newrenderer/tests/src/: main.cpp
scripts/: coarse.comp  fine.comp  voxel.comp  voxel.py  voxel2.comp  voxel2.py  voxel_culling.py  voxel_culling2.py  voxel_opt.comp  voxel_opt.py  voxel_opt2.py
scripts/benchmark/: display_benchmark.py  run_benchmark.py
scripts/compression_simulation/: size_calc.py
tests/: CMakeLists.txt
